--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   <!-- built files will be auto injected -->
 
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-  <script src="semantic/dist/semantic.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.0/dist/semantic.min.js"></script>
 </body>
 
 </html>
