--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,14 @@
   <script defer src="https://pro.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-+1nLPoB0gaUktsZJP+ycZectl3GX7wP8Xf2PE/JHrb7X1u7Emm+v7wJMbAcPr8Ge"
     crossorigin="anonymous"></script>
   <script>
-    (function (h, o, t, j, a, r) {
-      h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
-      h._hjSettings = { hjid: 853268, hjsv: 6 };
-      a = o.getElementsByTagName('head')[0];
-      r = o.createElement('script'); r.async = 1;
-      r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-      a.appendChild(r);
-    })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+    // (function (h, o, t, j, a, r) {
+    //   h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+    //   h._hjSettings = { hjid: 853268, hjsv: 6 };
+    //   a = o.getElementsByTagName('head')[0];
+    //   r = o.createElement('script'); r.async = 1;
+    //   r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+    //   a.appendChild(r);
+    // })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
   </script>
 </head>
 
