--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="da">
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="description" content="KiAP er etableret af PLO (Praktiserende Lægers Organisation) og Danske Regioner i fællesskab med henblik på at udvikle og
+  sikre kvaliteten i almen praksis som en del af det samlede sundhedsvæsen. Derudover er det at fremme forskning, som har betydning
+  for kvaliteten i almen praksis og det samlede sundhedsvæsen.">
   <link rel="shortcut icon" href="<%= webpackConfig.output.publicPath %>favicon.ico">
-  <title>vue-slack</title>
+  <title>Kvalitet i Almen Praksis</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
     crossorigin="anonymous">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-oi8o31xSQq8S0RpBcb4FaLB8LJi9AT8oIdmS1QldR8Ui7KUQjNAnDlJjp55Ba8FG"
+    crossorigin="anonymous">
   <script>
-    // (function (h, o, t, j, a, r) {
-    //   h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
-    //   h._hjSettings = { hjid: 853268, hjsv: 6 };
-    //   a = o.getElementsByTagName('head')[0];
-    //   r = o.createElement('script'); r.async = 1;
-    //   r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-    //   a.appendChild(r);
-    // })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+    (function (h, o, t, j, a, r) {
+      h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+      h._hjSettings = { hjid: 853268, hjsv: 6 };
+      a = o.getElementsByTagName('head')[0];
+      r = o.createElement('script'); r.async = 1;
+      r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+      a.appendChild(r);
+    })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
   </script>
 </head>
 
